Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,11 +239,11 @@
     }
    ],
    "source": [
-    "cur.execute(\"\"\"select * from orderdetails\n",
-    "                        join products\n",
-    "                        on orderdetails.productCode = products.productCode\n",
+    "cur.execute(\"\"\"select * from orderdetails o \n",
+    "                        join products p\n",
+    "                        on o.productCode = p.productCode\n",
     "                        limit 10;\n",
-    "                       \"\"\")\n",
+    "                       \"\"\") #can label orderdetails as o and then use it later in the code without typring the entire variable name out\n",
     "df = pd.DataFrame(cur.fetchall()) #Take results and create dataframe\n",
     "df.columns = [i[0] for i in cur.description]\n",
     "df.head()"
@@ -1304,7 +1304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
